# ECG-analyzer

./: .RPeaksDetector.h.kate-swp  .gitignore  AboutWindow.cpp  AboutWindow.h  AboutWindow.ui  BaselineRemoval.cpp  BaselineRemoval.h  Butterworth.h  CMakeLists.txt  Chebyshev.cpp  Chebyshev.h  DFAAnalyzer.cpp  DFAAnalyzer.h  ECG analyzer.sln  ECG analyzer.vcxproj  ECG analyzer.vcxproj.filters  ECGBaselineRemoval.cpp  ECGBaselineRemoval.h  ECGChannelInfo.cpp  ECGChannelInfo.h  ECGClasses.cpp  ECGClasses.h  ECGController.cpp  ECGController.h  ECGHRT.cpp  ECGHRT.h  ECGHRV1.cpp  ECGHRV1.h  ECGHRV2.cpp  ECGHRV2.h  ECGHRVDFA.cpp  ECGHRVDFA.h  ECGRs.cpp  ECGRs.h  ECGST.cpp  ECGST.h  ECGSignal.cpp  ECGSignal.h  ECGTWave.cpp  ECGTWave.h  (+47 more)
ControllerTest/: ControllerTest.vcxproj  gtestD.props  main.cpp
GeneratedFiles/: qrc_ecganalyzer.cpp  ui_ecganalyzer.h
GeneratedFiles/Debug/: moc_ecganalyzer.cpp
cmake_admin/: FindQwt.cmake  Findfftw.cmake  Findgsl.cmake
doc/: report (Fuko-Vaio's conflicted copy 2013-01-23).tex  report.bib  report.tex  report.tex.orig
doc/include/: baselineflow.eps  deployment_diagram.dia  deployment_diagram.eps  diferentiation.eps  ecg_st.eps  fig_butter.eps  fig_nieskuteczne.eps  fig_skuteczne.eps  fig_srednia.eps  hipass.eps  hipassampres.eps  hipassphaseres.eps  lowpass.eps  lowpassampres.eps  lowpassphaseres.eps  movingwindow.eps  package_diagram.dia  package_diagram.eps  qdet.eps  qrsdet.eps  qrsgood.eps  qrslong.eps  qrsshort.eps  rpeaks.eps  squaring.eps  surowy.eps  use_case_diagram.dia  use_case_diagram.eps  use_case_waves.dia  znormalizowany.eps
fft/: CMakeLists.txt
matrix/: Matrix.cpp  Matrix.h
plots/: ecg2ch.cpp  ecg2ch.h  ecgch.cpp  ecgch.h  gainsscaledraw.cpp  gainsscaledraw.h  hrt.cpp  hrt.h  plotdfa1.cpp  plotdfa1.h  plotdfa2.cpp  plotdfa2.h  plothrt.cpp  plothrt.h  plothrvfrequency.cpp  plothrvfrequency.h  plothrvtriangle.cpp  plothrvtriangle.h  plotpoincare.cpp  plotpoincare.h  plotqrs.cpp  plotqrs.h  plots.cpp  plots.h  plottachogram.cpp  plottachogram.h  scrollbar.cpp  scrollzoomer.cpp  scrollzoomer.h  stplot.cpp  stplot.h  synczoomer.cpp  synczoomer.h  timescaledraw.cpp  timescaledraw.h
spline/: CMakeLists.txt  ap.cpp  interpolation.cpp  linalg.cpp
spuc/: butterworth.h  chebyshev.h  complex.h
wfdb/: CMakeLists.txt  README  annot.c  calib.c  ecgcodes.h  ecgmap.h  signal.c  wfdb.h  wfdbinit.c  wfdbio.c  wfdblib.h
